# dgbminer

./: .gitignore  CMakeLists.txt  Makefile.am  README.md  algo-gate-api.c  algo-gate-api.h  api.c  bitcoin-config.h  compat.h  cpu-miner.c  dgbminer.cpp  dgbminer.sln  dgbminer.vcxproj  dgbminer.vcxproj.filters  miner.h  multialgo.c  multialgo.h  simd-utils.h_  sysinfos.c  util.c
algo/cubehash/: cubehash_sse2.c  cubehash_sse2.h
algo/luffa/: luffa_for_sse2.c  luffa_for_sse2.h
algo/odo/: odo.cpp
algo/qubit/: qubit-gate.c  qubit-gate.h  qubit.c
algo/scrypt/: scrypt-core-4way.c  scrypt-core-4way.h  scrypt.c
algo/sha/: sha-hash-4way.h  sha256-hash-4way.c  sha256-hash.c  sha256-hash.h  sha256.c  sha256.h  sha256d-4way.c  sha256d.c  sha256d.h  sha256dt.c  sha256q-4way.c  sha256t-4way.c  sph_sha2.c  sph_sha2.h
algo/shavite/: sph_shavite.h
algo/skein/: skein-4way.c  skein-gate.c  skein-gate.h  skein.c  skein2-4way.c  skein2.c
compat/: legacy_iob.c
compat/getopt/: getopt_long.c
compat/include/: endian.h
compat/include/json-c/: config.h
compat/lib/: jansson.lib  json-c.exp
compat/lib/pkgconfig/: jansson.pc
compat/lib/x64/: libcurl_a.lib  pthreadVC3.lib
res/: cpuminer.rc
simd-utils/: intrlv.h  simd-128.h  simd-256.h  simd-512.h  simd-int.h
winbuild/: cpuminer.vcxproj  mywin.sln  mywin.vcxproj  mywin.vcxproj.filters
